# UPLOAD-PLUGG-Windows-Build

./: .gitignore  BUILD_WINDOWS.md  CHANGELOG.md  GOOGLE_OAUTH_SETUP.md  INSTALLATION.md  KNOWN_LIMITATIONS.md  LICENSE.txt  PRIVACY_AND_DATA.md  README.md  TEST_PLAN.md  TROUBLESHOOTING.md  UPLOAD_PLUGG.spec  USER_GUIDE.md  build_windows.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: build-windows.yml
config/: chief_keef_type_beat.preset.json  oauth_client.example.json
installer/: UPLOAD_PLUGG.iss
migrations/: 001_initial.sql  002_activity.sql
samples/: sample_dry_run.json
src/upload_plugg/: __init__.py  app.py  constants.py  database.py  models.py  paths.py  settings.py
src/upload_plugg/core/: __init__.py  dry_run.py  filename_parser.py  random_pool.py  scanner.py  scheduling.py  templates.py  thumbnails.py  validation.py
src/upload_plugg/services/: __init__.py  auth.py  connectivity.py  keep_awake.py  logging_setup.py  mock_youtube.py  support_bundle.py  youtube.py
src/upload_plugg/ui/: components.py  design.py  icons.py  main_window.py  pages.py  theme.py  workers.py
tests/: test_auth_configuration.py  test_button_wiring.py  test_connectivity.py  test_filename_parser.py  test_random_pool_and_mock.py  test_scanner.py  test_scheduling.py  test_storage.py  test_templates.py  test_thumbnails.py  test_ui_background_tasks.py  test_youtube_metadata_body.py
