[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upload-plugg"
version = "1.0.3"
description = "Batch YouTube uploader and thumbnail generator for Windows"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [{name = "Dakuza"}]
dependencies = [
  "PySide6>=6.8,<7",
  "Pillow>=11,<13",
  "google-api-python-client>=2.160,<3",
  "google-auth-oauthlib>=1.2,<2",
  "google-auth-httplib2>=0.2,<1",
  "keyring>=25,<27",
  "tzdata>=2025.1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "pytest-cov>=6,<8", "ruff>=0.9,<1"]

[project.scripts]
upload-plugg = "upload_plugg.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
